tests/NormalTests/paczka1/small_fuzzy/99562908.err
Error in line 8: gitRr9T S942 38,1
Error in line 11: 8Dl S611 -3,6
Error in line 2: 8Dl S611 60,4
